--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Parrot Story!!</title>
-  <script type="module" crossorigin src="/assets/main-Ccw4Xk3f.js"></script>
+  <script type="module" crossorigin src="/assets/main-DxtLycaL.js"></script>
   <link rel="stylesheet" crossorigin href="/assets/main-DVsSN-Vn.css">
 </head>
 
